[package]
authors = ["Erik Johnston <erik@matrix.org>"]
name = "rust-matrix-lib"
version = "0.1.0"

[dependencies]
base64 = "0.9.1"
chrono = "0.4.2"
failure = "0.1.1"
serde = "1.0.45"
serde_derive = "1.0.45"
serde_json = "1.0.17"
sha2 = "0.7.1"
smallvec = "0.6.1"
sodiumoxide = "0.0.16"

[dependencies.sha1]
features = ["std"]
version = "0.6.0"
